# Thaum1el_Chat

./: CMakeLists.txt  README.md
config/: client_config.txt  server_config.txt
include/: config.hpp  macros.hpp
include/ui/: painter.hpp  screen.hpp
source/: config.cpp
source/ui/: painter.cpp  screen.cpp
test/: config.cpp
